--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,21 +8,24 @@
 </head>
 <body>
     <div class="login-container">
-        <h1>Login</h1>
+        <h1>Signup</h1>
 
         {{if .ErrorMessage}}
         <div class="error-message">{{.ErrorMessage}}</div>
         {{end}}
-	<br>
-        <form action="/login" method="POST">
-            <label for="username">Username:</label>
+
+        <form action="/signup" method="POST">
+            <label for="username">New username:</label>
             <input type="text" id="username" name="username" required>
             <br>
-            <label for="password">Password:</label>
+            <label for="password">New password:</label>
             <input type="password" id="password" name="password" required>
             <br>
-            <button type="submit">Login</button>
-	    <p class="signup-message">Don't have an account? <a href="/signup">Sign Up</a></p>
+            <label for="password">Repeat password:</label>
+            <input type="password" id="password" name="rpassword" required>
+            <br>
+            <button type="submit">Sign up</button>
+	    <p class="signup-message">Already have an account? <a href="/login">Log in</a></p>
         </form>
     </div>
 </body>
