Adding signup and change password backend

--- a/templates/autenticado.html
+++ b/templates/autenticado.html
@@ -11,7 +11,7 @@
     <div class="login-container">
         <h1>Authenticated menu</h1>
 	<div class="button-container">
-	    <form action="/change" method="POST">
+	    <form action="/change" method="GET">
             <button type="submit" id="change">Change my password</button>
 	    </form>
 	    <form action="/logout" method="POST">
