--- a/templates/change.html
+++ b/templates/change.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Change password page</title>
     <link rel="stylesheet" href="/assets/css/change.css">
+    <script src="/assets/js/change.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -32,8 +33,8 @@
             <button type="submit" class="submit-button">Change password</button>
         </form>
 	<br>
-        <form action="/success" method="POST" class="back-form">
-            <button type="submit" class="submit-button">Back to menu</button>
+        <form class="back-form">
+            <button type="button" class="submit-button" id="back-button">Back to menu</button>
         </form>
     </div>
 </body>
