--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -5,24 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login page</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <script src="https://www.google.com/recaptcha/api.js?render={{.SiteKey}}"></script>
+    <script>
+        function onSubmit(token) {
+            document.getElementById("recaptchaResponse").value = token;
+            document.getElementById("form").submit();
+        }
+        function getToken(event) {
+            event.preventDefault(); 
+            grecaptcha.ready(function() {
+                grecaptcha.execute('{{.SiteKey}}', {action: 'submit'}).then(function(token) {
+                    onSubmit(token);
+                });
+            });
+        }
+    </script>
 </head>
 <body>
     <div class="login-container">
         <h1>Login</h1>
 
-        {{if .ErrorMessage}}
+	{{if .ErrorMessage}}
         <div class="error-message">{{.ErrorMessage}}</div>
         {{end}}
-	<br>
-        <form action="/login" method="POST">
+        <br>
+
+        <form id="form" action="/login" method="POST" onsubmit="getToken(event);">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
             <br>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <br>
+            <input type="hidden" id="recaptchaResponse" name="g-recaptcha-response">
             <button type="submit">Login</button>
-	    <p class="signup-message">Don't have an account? <a href="/signup">Sign Up</a></p>
+            <p class="signup-message">Don't have an account? <a href="/signup">Sign Up</a></p>
         </form>
     </div>
 </body>
